--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
+    ext {
+        corektx_version = '1.6.0'
+        appcompact_version = '1.3.1'
+        coordinator_version = '1.1.0'
+        constraint_layout = '2.1.1'
+        material_version = '1.4.0'
+        nav_version = '2.3.5'
+        room_version = '2.3.0'
+        retrofit_version = '2.9.0'
+        moshi_version = '1.9.3'
+        lifecycle_version = '2.4.0'
+    }
+
     repositories {
         google()
         mavenCentral()
@@ -7,6 +21,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
