--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         retrofit_version = '2.9.0'
         moshi_version = '1.9.3'
         lifecycle_version = '2.4.0'
+        coroutines_verison = '1.5.0'
     }
 
     repositories {
