--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,6 @@ dependencies {
 
     // Room libraries
     implementation "androidx.room:room-runtime:$room_version"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
@@ -75,6 +74,9 @@ dependencies {
     // Kotlin Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_verison"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_verison"
+
+    // Paging
+    implementation "androidx.paging:paging-common-ktx:$paging_version"
 
 
     testImplementation 'junit:junit:4.+'
