--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         moshi_version = '1.9.3'
         lifecycle_version = '2.4.0'
         coroutines_verison = '1.5.0'
+        paging_version = '3.0.0'
     }
 
     repositories {
